// Generated file
import "ccsds_mal/types.proto";



package pusGroundModel.protobuf;

message PusElement {
extensions 3 to 103;

  optional ccsds_mal.protobuf.UINTEGER lastUpdateMode = 1;
  optional ccsds_mal.protobuf.TIME lastUpdateTime = 2;
}
